feat: add module section ddl